2007-08-07  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14897
        Decompilation of double negation fails and produces invalid or incorrect code

        * fast/js/function-decompilation-operators-expected.txt: Added.
        * fast/js/function-decompilation-operators.html: Added.

2007-08-07  David Kilzer  <ddkilzer@webkit.org>

        Reviewed by Oliver.

        Move plain-text-document.txt to the resources subdirectory.

        * fast/loader/plain-text-document.html: Updated URL to plain-text-document.txt.
        * fast/loader/plain-text-document.txt: Removed.
        * fast/loader/resources/plain-text-document.txt: Copied from fast/loader/plain-text-document.txt.

2007-08-07  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff Garen.

        Make tests not depend on data: URLs in preparation of
        data: URL policy change. 

        * editing/pasteboard/drag-image-to-contenteditable-in-iframe.html:
        * editing/pasteboard/resources: Added.
        * editing/pasteboard/resources/drag-image-to-contenteditable-iframe.html: Added.
        * fast/dom/HTMLDocument/frameless-location-bugzilla10837.html:
        * fast/dom/HTMLDocument/resources: Added.
        * fast/dom/HTMLDocument/resources/frameless-location-bugzilla10837-iframe.html: Added.
        * fast/dom/exception-no-frame-inline-script-crash.html:
        * fast/dom/exception-no-frame-timeout-crash.html:
        * fast/dom/null-document-location-assign-crash.html:
        * fast/dom/null-document-location-href-put-crash.html:
        * fast/dom/null-document-location-put-crash.html:
        * fast/dom/null-document-location-replace-crash.html:
        * fast/dom/null-document-window-open-crash.html:
        * fast/dom/resources/exception-no-frame-inline-script-crash-iframe.html: Added.
        * fast/dom/resources/exception-no-frame-timeout-crash-iframe.html: Added.