@@ -1,3 +1,13 @@
+2007-08-08  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
+        Reviewed and landed by Brady
+
+        Updated test case because of fix for <http://bugs.webkit.org/show_bug.cgi?id=13422>
+
+        Bug 13422: REGRESSION: Page reload loses page position
+
+        * http/tests/navigation/success200-reload-expected.txt:
+
 2007-08-07  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Oliver.
